--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,8 @@ DB_PORT=5432
 # CLOUDINARY_CLOUD_NAME=seu_cloud_name
 # CLOUDINARY_API_KEY=sua_api_key
 # CLOUDINARY_API_SECRET=seu_api_secret
+
+# ProduþÒo (opcional)
+# DJANGO_SECURE_SSL_REDIRECT=True
+# DJANGO_CSRF_TRUSTED_ORIGINS=https://seu-app.onrender.com
+# DJANGO_SECURE_HSTS_SECONDS=0
