--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 asgiref==3.11.0
 crispy-bootstrap5==2025.6
-Django==6.0
+Django==5.1.4
 django-crispy-forms==2.5
 django-cloudinary-storage==0.3.0
 cloudinary==1.44.1
@@ -8,3 +8,5 @@ pillow==12.0.0
 psycopg2-binary
 sqlparse==0.5.4
 tzdata==2025.2
+gunicorn==22.0.0
+whitenoise==6.7.0
