--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: agir-obras
     env: python
     plan: free
-    buildCommand: pip install -r requirements.txt && python manage.py collectstatic --noinput && python manage.py migrate
+    buildCommand: pip install -r requirements.txt && python manage.py collectstatic --noinput && python manage.py migrate && python manage.py ensure_superuser
     startCommand: gunicorn app.wsgi:application
     envVars:
       - key: PYTHON_VERSION
